# Marabou

./: .gitignore  CMakeLists.txt  build_and_run.sh  build_and_run_all.sh  build_and_run_some.sh  build_and_test.sh  build_from_scratch.sh  how to run.txt  results_for_queries.txt  unsafe_build_from_scratch.sh  windows_connect.bat
python_runners/: run_marabou.py
resources/properties/: acas_property_always_sat.txt
run_batches/: convert_names.py  n_1_1_p_1.sh  n_1_1_p_2.sh  n_1_1_p_3.sh  n_1_1_p_4.sh  n_1_1_p_sat.sh  n_1_2_p_1.sh  n_1_2_p_2.sh  n_1_2_p_3.sh  n_1_2_p_4.sh  n_1_3_p_1.sh  n_1_3_p_2.sh  n_1_3_p_3.sh  n_1_3_p_4.sh  n_general.sh
src/common/: MatrixMultiplication.cpp  Statistics.cpp  Statistics.h
src/configuration/: GlobalConfiguration.cpp  OptionParser.cpp  Options.cpp  Options.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Marabou.cpp  ReluConstraint.cpp  SymbolicBoundTighteningType.h
src/input_parsers/: AcasParser.cpp
src/nlr/: Layer.cpp  (+5 more)
src/nlr/ai/AbstractDomain/: AbstractDomain.h  AbstractDomainBuilder.h  CMakeLists.txt  ComplexAbstractDomainBuilder.cpp  ComplexAbstractDomainBuilder.h
src/nlr/ai/AbstractDomain/PolyhedronUnder/: Halfspace.cpp  Halfspace.h  PolyhedronUnder.cpp  PolyhedronUnder.h
src/nlr/ai/AbstractDomain/PolyhedronUnderN/: PolyhedronUnderN.cpp  PolyhedronUnderN.h
src/nlr/ai/AbstractDomain/Zonotope/: Zonotope.cpp  Zonotope.h  ZonotopeOperations.cpp  ZonotopeOperations.h  ZonotopeVertex.h
src/nlr/ai/AbstractDomain/ZonotopeN/: CMakeLists.txt  ZonotopeN.cpp  ZonotopeN.h
tools/: Makefile.config.patch  download_apron.sh
(+44 files in other folders)
